@@ -1,0 +1,1 @@
+#define _LIBICONV_VERSION 0x0109    /* version number: (major<<8) + minor */
